# app/Models/Notes/NoteBcba.php
@@ -10,6 +10,7 @@ namespace App\Models\Notes;
  *     @OA\Property(property="patient_id", type="string", nullable=true),
  *     @OA\Property(property="doctor_id", type="integer", nullable=true),
  *     @OA\Property(property="bip_id", type="integer", nullable=true),
+ *     @OA\Property(property="insurance_identifier", type="string", nullable=true),
  *     @OA\Property(property="diagnosis_code", type="string", maxLength=50, nullable=true),
  *     @OA\Property(property="location", type="string", maxLength=50, nullable=true),
  *     @OA\Property(property="meet_with_client_at", type="string", nullable=true),
